Fix line-height on mobile navigation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,6 +145,7 @@ p {
     padding: 5px 16px;
     text-decoration: none;
     display: block;
+    line-height: 30px;
   }
   
   .top-nav-burger a.icon {
